# fzf-dirhistory

./: .gitignore  README.md  setup.cfg
fzfdirhist/: __init__.py  __main__.py  fzfdirhist.py
src/dirhistory/: __init__.py
