[metadata]
name = dirhistory
version = 0.1.0
author = Olivier Roques
author_email = olivier@oroques.dev
description = Log recently visited directories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oroques/python-dirhistory
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: Unix
  Topic :: Terminals

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
